--- a/css/contact.css
+++ b/css/contact.css
@@ -1,4 +1,13 @@
+/* Core Styles */
 
+.main-nav__action-li {
+	display: none !important;
+}
+
+.main-header {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
 
 /* Colors */
 
@@ -85,7 +94,7 @@
 	padding-left: 5px;
 	border: 2px solid var(--bs-darkblue);
 	font-size: 1.2rem;
-	font-family: Montserrat;
+	font-family: Montserrat, 'Segoe UI', sans-serif;
 	caret-color:  var(--bs-darkblue);
 	transition: 0.5s;
 }
@@ -102,6 +111,31 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+}
+
+/* RWD Styles */
+
+@media only screen and (max-width: 991px) {
+	/* Info Section Styles */
+
+	.info-section {
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	/* Contact Section Styles */
+
+	.contact-form input {
+		width: 50%;
+	}
+
+	.contact-form textarea {
+		width: 70%;
+	}
+
+	.contact-form__buttons .button:first-child {
+		display: none;
+	}
 }
 
 
