--- a/css/invan.css
+++ b/css/invan.css
@@ -94,3 +94,28 @@
 .benefits-section__item-img img {
 	width: 80%;
 }
+
+/* RWD Styles */
+
+@media only screen and (max-width: 991px) {
+	/* Benefits Section */
+
+	.benefits-section .container {
+		flex-direction: column;
+	}
+
+	.benefits-section__item-info,
+	.benefits-section__item-img {
+		width: 90%;
+		padding-top: 40px;
+	}
+}
+
+
+
+/*
+
+Shirinov Fayozxon 2006
+2021 | Copyright
+
+*/
