--- a/css/web-site-portfolio.css
+++ b/css/web-site-portfolio.css
@@ -51,7 +51,7 @@
 
 .portfolio-section__items {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
 	padding-bottom: 40px;
@@ -59,7 +59,7 @@
 
 .portfolio-section__item {
 	padding-top: 40px;
-	width: 25%;
+	width: 250px;
 	margin-right: 3%;
 	display: flex;
 	flex-direction: column;
