--- a/css/shared.css
+++ b/css/shared.css
@@ -1,4 +1,4 @@
-/* Colors */
+ /* Colors */
 
 :root{
 	--bs-black: #333;
@@ -46,11 +46,10 @@ a.disabled {
 	box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
 	cursor: pointer;
 	transition: 0.5s;
-	z-index: 5;
+	z-index: 6;
 }
 .plus-button__animation {
 	animation: plus-button 4s ease infinite;
-	animation-delay: 0s;
 }
 .plus-button i {
 	transition: 0.5s;
@@ -58,30 +57,41 @@ a.disabled {
 .plus-button:hover {
 	box-shadow: 0 .5rem 1rem rgba(0,0,0,.35);
 }
+.plus-button.active i {
+	transform: rotate(45deg);
+}
 
 .plus-button__item {
 	position: fixed;
-	bottom: 130px;
-	right: 150px;
-	width: 30px;
-	height: 30px;
+	bottom: 55px;
+	right: 55px;
+	width: 40px;
+	height: 40px;
 	border-radius: 50%;
 	background: var(--bs-orange);
 	text-align: center;
 	line-height: 30px;
 	font-size: 1.2rem;
 	color: #fff;
-	display: none;
 	box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
 	z-index: 5;
+	transition: 0.5s;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
 }
-.plus-button__item:nth-child(2) {
-	bottom: 160px;
-	right: 90px;
+.plus-button__item.active {
+	transform: translate(0, -70px);
+	transition: 0.2s;
 }
-.plus-button__item:nth-child(3) {
-	bottom: 60px;
-	right: 160px;
+.plus-button__item.active:nth-child(2) {
+	transform: translate(-50px, -50px);
+	transition: 0.5s;
+}
+.plus-button__item.active:nth-child(3) {
+	transform: translate(-70px, 0);
+	transition: 0.8s;
 }
 
 .button {
@@ -118,10 +128,14 @@ a.disabled {
 	top: 20px;
 	left: 0;
 	width: 100%;
-	background: #ffffffdd;
+	background: rgba(255, 255, 255, 0.9);
 	transition: 0.5s;
-	backdrop-filter: blur(2px);
 	z-index: 10;
+}
+
+.main-header.active {
+	top: 0;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
 .main-header .container {
@@ -187,29 +201,60 @@ a.disabled {
 }
 
 .main-nav__portfolio-link:hover div {
-	display: block;
 	opacity: 1;
+	pointer-events: visible;
 }
 
 .main-nav__portfolio-overlay {
 	position: absolute;
 	top: 25px;
 	left: 0;
+	width: 150px;
+	height: 150px;
 	padding: 20px;
 	background: #ffffffdd;
-	box-shadow: 0 0 15px 0 #00000020;
+	box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
 	transition: 0.6s;
 	opacity: 0;
-	display: none;
+	pointer-events: none;
 }
 
 .main-nav__portfolio-overlay ul {
-	padding-left: 0;
+	padding-left: 5px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
 }
 
 .main-nav__portfolio-overlay li {
 	padding-top: 20px;
-	display: block;
+	padding-left: 10px;
+}
+
+.main-header__nav-toggler {
+	width: 30px;
+	height: 30px;
+	margin-right: 20px;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	display: none;
+}
+
+.main-header__nav-toggler i {
+	transition: 0.5s;
+	color: var(--bs-black);
+	font-size: 1.1rem;
+}
+
+.main-header__nav-toggler i.fa-times {
+	display: none;
+}
+
+.main-header__nav-toggler:hover i {
+	color: var(--bs-orange);
 }
 
 
@@ -279,28 +324,79 @@ a.disabled {
 /* RWD Styles */
 
 @media only screen and (max-width: 991px) {
-	
+	/* Core Styles */
+
+	body {
+		overflow-x: hidden;
+	}
+
+	.container {
+		width: 95%;
+	}
+
+
 	/* Main Header Styles */
 
 	.main-header {
-		height: 70px;
+		height: 50px;
+	}
+	.main-header .container {
+		width: 100%;
 	}
 
-	.main-header__logo img {
-		padding-top: 30px;
+	.main-header .container {
+		width: 100%;
+		padding: 10px;
+	}
+
+
+	/* Main Nav */
+
+	.main-nav {
+		position: fixed;
+		top: 100px;
+		left: 10px;
+		width: 200px;
+		height: 350px;
+		background: rgba(255, 255, 255, 0.95);
+		transition: 0.5s;
+		z-index: 10;
+		box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+		transform: translateX(-220px);
+	}
+	.main-nav.active {
+		transform: translateX(0);
+	}
+
+	.main-header__nav-toggler {
+		display: block;
+	}
+	.main-nav.active ~ .main-header__nav-toggler i.fa-hamburger {
+		display: none;
+	}
+	.main-nav.active ~ .main-header__nav-toggler i.fa-times {
+		display: block;
 	}
 
 	.main-nav__items {
+		display: flex;
+		justify-content: space-around;
+		align-content: center;
+		flex-direction: column;
+		height: 80%;
+		padding: 30px;
+	}
+
+	.main-nav__items li:last-child,
+	.main-nav__items .phone {
 		display: none;
 	}
 
+	/* Footer */
+
+	.footer-in .container {
+		text-align: center;
+		flex-direction: column;
+	}
+
 }
-
-
-
-/*
-
-Shirinov Fayozxon 2006
-2021 | Copyright
-
-*/
